Implemented migrations and seeds

--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "netflix-clone-project-setup",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "aw-node-db-alpha": "^3.0.2",
-    "dotenv": "^10.0.0",
-    "fs-extra": "^10.0.0"
-  }
+ "name": "netflix-clone-project-setup",
+ "version": "1.0.0",
+ "description": "",
+ "main": "index.js",
+ "scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "migrations": "node src/migrations.js",
+  "seeds": "node src/seeds.js",
+  "start": "npm run migrations && npm run seeds"
+ },
+ "keywords": [],
+ "author": "",
+ "license": "ISC",
+ "dependencies": {
+  "aw-node-db-alpha": "^3.0.2",
+  "axios": "^0.24.0",
+  "dotenv": "^10.0.0",
+  "fs-extra": "^10.0.0"
+ }
 }
