Update project for Appwrite version 1.3
1. Use appwrite.json to deploy collections
2. Use Appwrite CLI to create bucket
3. Update seeds script after bumping Appwrite SDK version

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 APPWRITE_ENDPOINT=
-APPWRITE_PROJECT_ID=
+APPWRITE_SELF_SIGNED=
+APPWRITE_PROJECT_ID=almost-netflix
+APPWRITE_DATABASE_ID=default
+APPWRITE_MOVIES_COLLECTION_ID=movies
+APPWRITE_POSTERS_BUCKET_ID=posters
 APPWRITE_API_KEY=
-MDB_API_KEY=
+TMDB_API_KEY=
